Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerObjectField.quorum
class Main
    Object v
    action Main
        v:SetValue()
        Test(v)
    end

    action Test(integer var)
    end
end
